--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -34,13 +34,18 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
 name: JS Actions
 
 on: [push]
 
 jobs:
   action:
+
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+    - uses: actions/checkout@v1
+
+    - name: hello-action
+      uses: ./.github/actions/hello-world
